<resources>

    <string name="app_name">mancoreman</string>

    <string name="signup">회원가입</string>
    <string name="login">로그인</string>

    <!--  로그인 페이지  -->
    <string name="directLogin_id">아이디</string>
    <string name="directLogin_pw">패스워드</string>
    <string name="directLogin_login">로그인</string>

    <!--  회원가입 페이지  -->
    <string name="signup_id">아이디</string>
    <string name="signup_pw">패스워드</string>
    <string name="signup_name">이름</string>
    <string name="signup_email">이메일</string>
    <string name="signup_mobile">핸드폰번호</string>

    <!-- 하단 네비게이션 <홈>-->
    <string name="home_main_text">안녕하세요\n유상용님.</string>


</resources>